--- a/style.css
+++ b/style.css
@@ -145,10 +145,10 @@ footer ul {
     
     main{
         display:grid;
-        grid-template-columns: 30VW 70VW;
+        grid-template-columns: 20VW 10VW 70VW;
     }
     main section{
-     grid-column: 2;
+     grid-column: 3;
      display: grid;
      grid-template-columns: 50% 50%;
      grid-column-gap: 1em;
@@ -156,8 +156,17 @@ footer ul {
     }
     main section article{
      
-
-}       
+}    
+    main form{
+        grid-column: 1;
+        background-color: #ffc917;
+        margin: 2em 3em 2em 1em;
+        max-height: 80VH;
+        padding 1em;
+    }
+    main form p{
+        display:flex;
+    }
 }
 
 
