--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ main section article {
     margin-top: 1em;
     display: grid;
     max-height: 50vh;
-    max-width: 90vw;
+    width: 90vw;
     grid-template-rows: 40% 15% 30% 15%;
     margin: auto;
     margin-bottom: 1em;
