--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     font-size: 1.1em;
     display: grid;
     grid-template-columns: 100vw;
+    background-color: #e6e6e9;
 }
 
 /* ================HEADER================*/
@@ -68,11 +69,13 @@ nav a {
     text-decoration: none;
     color: black;
 }
-.TopBar{
+
+.TopBar {
     max-height: 2.5em;
     overflow: hidden;
 }
-.HeaderImg{
+
+.HeaderImg {
     visibility: hidden;
 }
 
@@ -81,13 +84,17 @@ main {
     margin-top: -1em;
 }
 
+main h1 {
+    margin: 2em 0em -2em 0.5em;
+    color: #003082;
+}
 
 main form {
     visibility: hidden;
 }
 
 main section article {
-    background-color: lightgray;
+    background-color: white;
     overflow: hidden;
     margin-top: 1em;
     display: grid;
@@ -170,82 +177,180 @@ footer ul {
 
 @media only screen and (min-width: 56em) {
 
-    .TopBar{
-        max-height: 70VH;
-        margin: 0 0 -15em 0;
-    }
-    
     .TopBar li a {
         visibility: visible;
         white-space: nowrap;
-        margin-right: 2em;
+        margin: 1em 3em 0 0;
         text-align: center;
     }
 
     nav ul {
-        height: 3em;
+        height: 4em;
         background-color: white;
     }
 
-    .TopBar li a svg {
-        visibility: visible;
-        top: 0;
-        left: 0;
-        height: 100%;
-        width: 2em;
-        display: block;
-    }
-
-
     .TopBar li:first-child {
         margin-right: auto;
+        margin-left: 7.5em;
     }
 
     .TopBar li a svg {
         visibility: visible;
-        top: 0;
+        margin-top: -2em;
         left: 0;
         height: 100%;
         width: 2.5em;
         display: block;
-        margin-left: -1em;
     }
-    
-    .HeaderImg{
+
+
+    .HeaderImg {
         visibility: visible;
     }
+
+    /* =============== DE MAIN =================*/
 
     main {
         margin-top: 5em;
         display: grid;
-        grid-template-columns: 20VW 5VW 74VW 1VW;
+        grid-template-columns: 5vw 15VW 5VW 70VW 5VW;
     }
 
-    main form {
-        width: 90%;
+    main h1 {
+        grid-column-start: 2;
+        grid-column-end: 4;
+        margin: 0em 0em 0em 3em;
+
     }
 
     main section {
         margin-top: 1em;
         width: 100%;
-        grid-column: 3;
+        grid-column: 4;
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
         grid-column-gap: 1em;
-        margin-right: 1.5em;
     }
+
+    /*============== First item gerestyled voor desktop =================*/
+    main section article:first-child {
+        grid-column-start: 1;
+        grid-column-end: 3;
+        display: grid;
+        grid-template-rows: 25% 20% 20% 15%;
+        grid-template-columns: 1fr 1fr;
+        background-image: url(images/moe.jpg);
+        background-size: cover;
+        height: 100%;
+
+    }
+
+    main section article:first-child header {
+        border-radius: 15px;
+        grid-row-start: 1;
+        grid-row-end: 3;
+        grid-column-start: 1;
+        grid-column-end: 3;
+        width: 50%;
+        background-color: #ffc917;
+        margin: 2em 0em 0em 1em;
+
+    }
+
+    main section article:first-child header img {
+        visibility: hidden;
+        overflow: hidden;
+        width: 0%;
+
+    }
+
+    main section article:first-child header h3 {
+        color: white;
+        font-size: 1.3em;
+        margin: 1em;
+
+        text-align: center;
+        max-height: 50%;
+        color: #003082;
+    }
+
+    main section article:first-child p {
+        font-size: 0.9em;
+        padding: 0;
+        margin: -5em 0em 0em 2.5em;
+        grid-row: 3;
+        height: 90%;
+        width: 80%;
+        overflow: hidden;
+    }
+
+    main section article:first-child ul {
+        list-style: none;
+        width: 100%;
+        grid-row-start: 1;
+        grid-row-end: 3;
+        grid-column-start: 1;
+        grid-column-end: 3;
+        margin: 4.7em 0 0 10em;
+        font-size: 0.8em;
+
+    }
+
+    main section article:first-child footer {
+        background-color: #ffc917;
+        max-width: 40%;
+        grid-row-start: 4;
+        grid-row-end: 6;
+        grid-column-start: 2;
+        grid-column-end: 3;
+        margin: 4em 0 1em 9em;
+        border-radius: 15px;
+        height: 40%;
+        padding: 1em 1em 1em 1.7em;
+    }
+
+    @keyframes YellowHover {
+        from {
+            background-color: #ffc917;
+            box-shadow: 0em 0em;
+        }
+
+        to {
+            background-color: #ecb617;
+            box-shadow: 0.2em 0.2em;
+        }
+    }
+
+    main section article:first-child footer:hover {
+        animation-name: YellowHover;
+        animation-duration: 0.5s;
+
+    }
+
+    main section article:first-child footer a {
+        text-decoration: none;
+        color: #003082;
+
+    }
+
+    /*einde first item stylen */
 
     main section article {
         width: 100%;
     }
 
     main form {
-        grid-column: 1;
         background-color: #ffc917;
-        margin: 1em 3em 1em 4em;
+        margin: 1em 1em 0em 4em;
         max-height: 80VH;
         padding 1em;
+        grid-column-start: 1;
+        grid-column-end: 4;
+        visibility: visible;
+        padding: 1em;
+        display: grid;
     }
+
 
     main form p {
         display: flex;
@@ -255,9 +360,9 @@ footer ul {
         visibility: visible;
     }
 
-    .footer{
+    .footer {
         height: 4em;
-        
+
     }
 
 }
