--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+/* Door het hele document heen gebruik ik grid en flex dit heb ik van:
+https://css-tricks.com/snippets/css/complete-guide-grid/
+https://css-tricks.com/snippets/css/a-guide-to-flexbox/
+*/
+
+
 * {
     box-sizing: border-box;
 }
@@ -162,7 +168,10 @@ main article footer a {
 }
 
 /*====================FORM (filter)==============*/
-
+/* bronnen :
+https://www.w3schools.com/howto/howto_js_toggle_class.asp
+https://www.w3schools.com/js/js_htmldom_eventlistener.asp
+*/
 main form {
     background-color: #ffc917;
     padding 1em;
@@ -283,6 +292,7 @@ main form a {
     width: 100%;
     bottom: 0;
     position: fixed;
+    margin-top 2em;
 }
 
 footer ul {
